--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,8 +1,31 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
     <!-- Base application theme. -->
     <style name="Base.Theme.DuckTiveTwo" parent="Theme.Material3.DayNight.NoActionBar">
-        <!-- Customize your light theme here. -->
-        <!-- <item name="colorPrimary">@color/my_light_primary</item> -->
+        <!-- Primary brand color. -->
+        <item name="colorPrimary">@color/lavender</item>
+        <item name="colorPrimaryVariant">@color/lavender</item>
+        <item name="colorOnPrimary">@color/white</item>
+        <!-- Secondary brand color. -->
+        <item name="colorSecondary">@color/teal_200</item>
+        <item name="colorSecondaryVariant">@color/teal_700</item>
+        <item name="colorOnSecondary">@color/black</item>
+        <!-- Status bar color. -->
+        <item name="android:statusBarColor">?attr/colorPrimaryVariant</item>
+        <!-- Customize your theme here. -->
+    </style>
+
+    <style name="DialogAnimation">
+        <item   name = "android:windowEnterAnimation">@anim/slide_in</item>
+        <item   name = "android:windowExitAnimation">@anim/slide_in</item>
+    </style>
+    <!-- Splashscreen -->
+    <style name="Splashscreen"  parent="Theme.MaterialComponents.DayNight.NoActionBar">
+        <item name ="android:windowBackground">
+            @drawable/background_splashscren
+        </item>
+
+        <item name="android:statusBarColor" tools:targetApi="l">?attr/colorPrimary
+        </item>
     </style>
 
     <style name="Theme.DuckTiveTwo" parent="Base.Theme.DuckTiveTwo" />
