Front-end design changes

--- a/app/src/main/res/layout/activity_intro_duke.xml
+++ b/app/src/main/res/layout/activity_intro_duke.xml
@@ -4,7 +4,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".IntroDuke">
+    tools:context=".IntroDuke"
+    android:background="@drawable/gradient_with_blur">
 
     <pl.droidsonroids.gif.GifImageView
         android:id="@+id/gifImageView"
