--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,8 +4,9 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/white"
-    tools:context=".MainActivity">
+    android:background="@drawable/gradient_with_blur"
+    tools:context=".MainActivity"
+    >
 
     <pl.droidsonroids.gif.GifImageView
         android:layout_width="400dp"
