--- a/app/src/main/res/layout/activity_sign_up.xml
+++ b/app/src/main/res/layout/activity_sign_up.xml
@@ -4,8 +4,10 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:layout_margin="10dp"
-    tools:context=".SignUp">
+
+    android:background="@drawable/gradient_with_blur"
+    tools:context=".SignUp"
+    >
 
     <EditText
         android:id="@+id/txtValidEmail5"
