--- a/app/src/main/res/layout/activity_expense2.xml
+++ b/app/src/main/res/layout/activity_expense2.xml
@@ -1,11 +1,46 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-                                                   xmlns:app="http://schemas.android.com/apk/res-auto"
-                                                   xmlns:tools="http://schemas.android.com/tools"
-                                                   android:layout_width="match_parent"
-                                                   android:layout_height="match_parent"
-                                                   android:background="@drawable/gradient_with_blur">
 
+<ScrollView
+	xmlns:android="http://schemas.android.com/apk/res/android"
+	xmlns:app="http://schemas.android.com/apk/res-auto"
+	xmlns:tools="http://schemas.android.com/tools"
+	android:layout_width="match_parent"
+	android:layout_height="match_parent"
+	android:fillViewport="true">
+
+<androidx.constraintlayout.widget.ConstraintLayout
+
+	android:layout_width="match_parent"
+
+	android:layout_height="match_parent"
+
+	android:background="@drawable/gradient_with_blur">
+
+
+	<com.google.android.material.floatingactionbutton.FloatingActionButton
+		android:id="@+id/floatingActionButton3"
+		android:layout_width="wrap_content"
+		android:layout_height="wrap_content"
+		android:layout_marginEnd="36dp"
+		android:layout_marginBottom="12dp"
+		android:clickable="true"
+		android:visibility="visible"
+		app:layout_constraintBottom_toTopOf="@+id/constraintLayout2"
+		app:layout_constraintEnd_toEndOf="parent"
+		app:srcCompat="@drawable/addbtn" />
+
+	<com.google.android.material.floatingactionbutton.FloatingActionButton
+		android:id="@+id/floatingActionButton5"
+		android:layout_width="wrap_content"
+		android:layout_height="wrap_content"
+		android:layout_marginEnd="36dp"
+		android:layout_marginBottom="13dp"
+
+		android:clickable="true"
+		android:visibility="invisible"
+		app:layout_constraintBottom_toTopOf="@+id/floatingActionButton3"
+		app:layout_constraintEnd_toEndOf="parent"
+		app:srcCompat="@drawable/budget" />
 
 	<androidx.constraintlayout.widget.ConstraintLayout
 		android:id="@+id/constraintLayout2"
@@ -141,11 +176,12 @@
 		android:layout_width="348dp"
 		android:layout_height="260dp"
 		android:layout_margin="16dp"
+		android:layout_marginTop="91dp"
 		app:layout_constraintBottom_toTopOf="@+id/textView35"
 		app:layout_constraintEnd_toEndOf="parent"
 		app:layout_constraintStart_toStartOf="parent"
+		app:layout_constraintTop_toBottomOf="@+id/textView30"
 		tools:ignore="MissingConstraints">
-
 
 		<ImageView
 			android:id="@+id/rectangleBackground2"
@@ -173,7 +209,8 @@
 			android:layout_marginTop="26dp"
 			android:layout_marginEnd="24dp" />
 
-		<ListView
+		<androidx.recyclerview.widget.RecyclerView
+			android:id="@+id/recyclerView1"
 			android:layout_width="134dp"
 			android:layout_height="144dp"
 			android:layout_alignParentStart="true"
@@ -181,7 +218,8 @@
 			android:layout_marginStart="29dp"
 			android:layout_marginTop="76dp" />
 
-		<ListView
+		<androidx.recyclerview.widget.RecyclerView
+			android:id="@+id/recyclerView2"
 			android:layout_width="134dp"
 			android:layout_height="144dp"
 			android:layout_alignParentStart="true"
@@ -195,35 +233,40 @@
 		android:id="@+id/textView35"
 		android:layout_width="wrap_content"
 		android:layout_height="wrap_content"
-		android:layout_marginBottom="200dp"
+		android:layout_marginBottom="228dp"
 		android:text="Expenses  of selected month"
 		android:textColor="@color/white"
 		android:textSize="60px"
 		android:textStyle="bold|italic"
 		app:layout_constraintBottom_toTopOf="@+id/constraintLayout2"
 		app:layout_constraintEnd_toEndOf="parent"
+		app:layout_constraintHorizontal_bias="0.495"
 		app:layout_constraintStart_toStartOf="parent" />
 
 	<com.github.mikephil.charting.charts.BarChart
 		android:id="@+id/barChart"
-		android:layout_width="297dp"
-		android:layout_height="124dp"
+		android:layout_width="235dp"
+		android:layout_height="125dp"
+		android:rotation="90
+"
 		app:layout_constraintBottom_toTopOf="@+id/constraintLayout2"
 		app:layout_constraintEnd_toEndOf="parent"
+		app:layout_constraintHorizontal_bias="0.15"
 		app:layout_constraintStart_toStartOf="parent"
-		app:layout_constraintTop_toBottomOf="@+id/textView35" />
+		app:layout_constraintTop_toBottomOf="@+id/textView35"
+		app:layout_constraintVertical_bias="0.565" />
 
 	<TextView
 		android:id="@+id/textView30"
 		android:layout_width="wrap_content"
 		android:layout_height="wrap_content"
-		android:layout_marginStart="16dp"
-		android:layout_marginTop="24dp"
+		android:layout_marginStart="136dp"
+		android:layout_marginTop="44dp"
 		android:text="DuckTiveTwo"
 		android:textColor="@color/white"
 		android:textSize="60px"
 		android:textStyle="bold|italic"
-		app:layout_constraintStart_toEndOf="@+id/imageView26"
+		app:layout_constraintStart_toStartOf="parent"
 		app:layout_constraintTop_toTopOf="parent" />
 
 	<ImageView
@@ -237,15 +280,6 @@
 		app:layout_constraintTop_toTopOf="parent"
 		app:srcCompat="@drawable/bell" />
 
-	<ImageView
-		android:id="@+id/imageView26"
-		android:layout_width="63dp"
-		android:layout_height="54dp"
-		android:layout_marginStart="16dp"
-		android:layout_marginTop="16dp"
-		app:layout_constraintStart_toStartOf="parent"
-		app:layout_constraintTop_toTopOf="parent"
-		app:srcCompat="@drawable/burgerreal" />
-
 
 </androidx.constraintlayout.widget.ConstraintLayout>
+</ScrollView>
