--- a/app/src/main/res/layout/activity_goals.xml
+++ b/app/src/main/res/layout/activity_goals.xml
@@ -11,13 +11,13 @@
         android:id="@+id/textView37"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="20dp"
-        android:layout_marginTop="32dp"
+        android:layout_marginStart="136dp"
+        android:layout_marginTop="44dp"
         android:text="DuckTiveTwo"
         android:textColor="@color/white"
         android:textSize="60px"
         android:textStyle="bold|italic"
-        app:layout_constraintStart_toEndOf="@+id/imageView2"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
     <androidx.constraintlayout.widget.ConstraintLayout
@@ -172,26 +172,18 @@
         app:layout_constraintTop_toTopOf="parent"
         app:srcCompat="@drawable/bell" />
 
-    <ImageView
-        android:id="@+id/imageView2"
-        android:layout_width="63dp"
-        android:layout_height="54dp"
-        android:layout_marginStart="16dp"
-        android:layout_marginTop="16dp"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@drawable/burgerreal" />
-
     <TextView
         android:id="@+id/textView16"
         android:layout_width="293dp"
         android:layout_height="41dp"
         android:layout_marginStart="28dp"
-        android:layout_marginTop="52dp"
+        android:layout_marginTop="40dp"
+        android:layout_marginEnd="90dp"
         android:text="Set Your Goals Here!"
         android:textColor="@color/white"
         android:textSize="70px"
         android:textStyle="bold|italic"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView37" />
 
