--- a/app/src/main/res/layout/activity_goals_completed.xml
+++ b/app/src/main/res/layout/activity_goals_completed.xml
@@ -1,26 +1,32 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout
+
+
+<ScrollView
 	xmlns:android="http://schemas.android.com/apk/res/android"
-xmlns:app="http://schemas.android.com/apk/res-auto"
+	xmlns:app="http://schemas.android.com/apk/res-auto"
 	xmlns:tools="http://schemas.android.com/tools"
+	android:layout_width="match_parent"
+	android:layout_height="match_parent"
+	android:fillViewport="true">
+
+<androidx.constraintlayout.widget.ConstraintLayout
 	android:layout_width="match_parent"
 	android:layout_height="match_parent"
 	android:background="@drawable/gradient_with_blur">
 
 
 	<TextView
-		android:id="@+id/textView30"
+		android:id="@+id/textView45"
 		android:layout_width="wrap_content"
 		android:layout_height="wrap_content"
-		android:layout_marginStart="94dp"
-		android:layout_marginTop="30dp"
+		android:layout_marginStart="136dp"
+		android:layout_marginTop="44dp"
 		android:text="DuckTiveTwo"
 		android:textColor="@color/white"
-		android:textSize="24sp"
+		android:textSize="60px"
 		android:textStyle="bold|italic"
 		app:layout_constraintStart_toStartOf="parent"
 		app:layout_constraintTop_toTopOf="parent" />
-
 
 	<androidx.constraintlayout.widget.ConstraintLayout
 		android:id="@+id/constraintLayout2"
@@ -222,16 +228,6 @@ xmlns:app="http://schemas.android.com/apk/res-auto"
 		app:layout_constraintStart_toStartOf="parent"
 		app:layout_constraintTop_toTopOf="parent" />
 
-	<ImageView
-		android:id="@+id/imageView26"
-		android:layout_width="63dp"
-		android:layout_height="54dp"
-		android:layout_marginStart="16dp"
-		android:layout_marginTop="16dp"
-		app:layout_constraintStart_toStartOf="parent"
-		app:layout_constraintTop_toTopOf="parent"
-		app:srcCompat="@drawable/burgerreal" />
-
 
 	<!-- Circular Progress Bar -->
 
@@ -243,3 +239,5 @@ xmlns:app="http://schemas.android.com/apk/res-auto"
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
+
+</ScrollView>
