--- a/app/src/main/res/layout/activity_habits.xml
+++ b/app/src/main/res/layout/activity_habits.xml
@@ -1,22 +1,67 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout
+
+
+<ScrollView
 	xmlns:android="http://schemas.android.com/apk/res/android"
 	xmlns:app="http://schemas.android.com/apk/res-auto"
 	xmlns:tools="http://schemas.android.com/tools"
 	android:layout_width="match_parent"
 	android:layout_height="match_parent"
+	android:fillViewport="true">
+
+
+
+
+<androidx.constraintlayout.widget.ConstraintLayout
+	android:layout_width="match_parent"
+	android:layout_height="match_parent"
 	android:background="@drawable/gradient_with_blur">
+
+	<com.google.android.material.floatingactionbutton.FloatingActionButton
+		android:id="@+id/FAB1"
+		android:layout_width="wrap_content"
+		android:layout_height="wrap_content"
+		android:layout_marginEnd="36dp"
+		android:layout_marginBottom="12dp"
+		android:clickable="true"
+		android:visibility="visible"
+		app:layout_constraintBottom_toTopOf="@+id/constraintLayout2"
+		app:layout_constraintEnd_toEndOf="parent"
+		app:srcCompat="@drawable/addbtn" />
+
+	<com.google.android.material.floatingactionbutton.FloatingActionButton
+		android:id="@+id/FAB2"
+		android:layout_width="wrap_content"
+		android:layout_height="wrap_content"
+		android:layout_marginEnd="36dp"
+		android:layout_marginBottom="13dp"
+		android:clickable="true"
+		android:visibility="invisible"
+		app:layout_constraintBottom_toTopOf="@+id/FAB1"
+		app:layout_constraintEnd_toEndOf="parent"
+		app:srcCompat="@drawable/target" />
+
+	<TextView
+		android:id="@+id/textView43"
+		android:layout_width="wrap_content"
+		android:layout_height="wrap_content"
+		android:layout_marginStart="136dp"
+		android:layout_marginTop="44dp"
+		android:text="DuckTiveTwo"
+		android:textColor="@color/white"
+		android:textSize="60px"
+		android:textStyle="bold|italic"
+		app:layout_constraintStart_toStartOf="parent"
+		app:layout_constraintTop_toTopOf="parent" />
 
 	<RelativeLayout
 		android:id="@+id/groupedContainer"
 		android:layout_width="347dp"
 		android:layout_height="160dp"
 		android:layout_margin="16dp"
-		android:layout_marginTop="107dp"
 		app:layout_constraintBottom_toTopOf="@+id/groupedContainer2"
 		app:layout_constraintEnd_toEndOf="parent"
 		app:layout_constraintStart_toStartOf="parent"
-		app:layout_constraintTop_toBottomOf="@+id/imageView26"
 		tools:ignore="MissingConstraints">
 
 		<ImageView
@@ -26,8 +71,8 @@
 			android:background="#F5BB66"
 			android:scaleType="fitXY" />
 
-		<ListView
-			android:id="@+id/editableListView"
+		<androidx.recyclerview.widget.RecyclerView
+			android:id="@+id/recyclerView"
 			android:layout_width="298dp"
 			android:layout_height="118dp"
 			android:layout_centerInParent="true"
@@ -56,8 +101,8 @@
 			android:background="#F5BB66"
 			android:scaleType="fitXY" />
 
-		<ListView
-			android:id="@+id/editableListView2"
+		<androidx.recyclerview.widget.RecyclerView
+			android:id="@+id/recyclerView2"
 			android:layout_width="297dp"
 			android:layout_height="122dp"
 			android:layout_centerInParent="true"
@@ -202,86 +247,44 @@
 		android:id="@+id/imageView24"
 		android:layout_width="100dp"
 		android:layout_height="116dp"
-		android:layout_marginBottom="24dp"
+		android:layout_marginBottom="40dp"
+		android:src="@drawable/duckduck"
 		app:layout_constraintBottom_toTopOf="@+id/constraintLayout2"
 		app:layout_constraintEnd_toEndOf="parent"
 		app:layout_constraintHorizontal_bias="0.498"
-		app:layout_constraintStart_toStartOf="parent"
-		android:src="@drawable/duckduck"/>
-
-
-
-
-	<Button
-		android:id="@+id/plusButton"
-		android:layout_width="66dp"
-		android:layout_height="66dp"
-		android:layout_gravity="center"
-		android:layout_margin="8dp"
-		android:layout_marginStart="46dp"
-		android:layout_marginBottom="64dp"
-		android:background="@drawable/circular_button_background"
-		android:clipToOutline="true"
-		android:outlineProvider="background"
-		android:padding="16dp"
-		android:text="+"
-		android:textSize="20sp"
-		android:textStyle="bold"
-		app:layout_constraintBottom_toTopOf="@+id/constraintLayout2"
-		app:layout_constraintEnd_toEndOf="parent"
-		app:layout_constraintHorizontal_bias="0.681"
-		app:layout_constraintStart_toEndOf="@+id/imageView24"
-		app:layout_constraintTop_toTopOf="@+id/imageView24"
-		app:layout_constraintVertical_bias="0.0" />
-
-	<ImageView
-		android:id="@+id/imageView26"
-		android:layout_width="63dp"
-		android:layout_height="54dp"
-		android:layout_marginStart="16dp"
-		android:layout_marginTop="16dp"
-		app:layout_constraintStart_toStartOf="parent"
-		app:layout_constraintTop_toTopOf="parent"
-		app:srcCompat="@drawable/burgerreal" />
-
-	<TextView
-		android:id="@+id/textView30"
-		android:layout_width="wrap_content"
-		android:layout_height="wrap_content"
-		android:layout_marginStart="16dp"
-		android:layout_marginTop="32dp"
-		android:text="DuckTiveTwo"
-		android:textColor="@color/white"
-		android:textSize="60px"
-		android:textStyle="bold|italic"
-		app:layout_constraintStart_toEndOf="@+id/imageView26"
-		app:layout_constraintTop_toTopOf="parent" />
+		app:layout_constraintStart_toStartOf="parent" />
 
 	<TextView
 		android:id="@+id/textView11"
 		android:layout_width="wrap_content"
 		android:layout_height="wrap_content"
-		android:layout_marginStart="4dp"
+		android:layout_marginStart="84dp"
 		android:layout_marginTop="92dp"
+		android:layout_marginEnd="86dp"
 		android:layout_marginBottom="17dp"
 		android:text="Create your Habits here!"
 		android:textColor="@color/white"
 		android:textSize="60px"
 		android:textStyle="bold|italic"
 		app:layout_constraintBottom_toTopOf="@+id/groupedContainer"
-		app:layout_constraintStart_toEndOf="@+id/imageView26"
+		app:layout_constraintEnd_toEndOf="parent"
+		app:layout_constraintStart_toStartOf="parent"
 		app:layout_constraintTop_toTopOf="parent" />
 
 	<ImageView
 		android:id="@+id/imageView27"
 		android:layout_width="37dp"
 		android:layout_height="18dp"
-		android:layout_marginTop="16dp"
+		android:layout_marginTop="32dp"
 		app:layout_constraintEnd_toEndOf="parent"
-		app:layout_constraintHorizontal_bias="0.922"
+		app:layout_constraintHorizontal_bias="0.917"
 		app:layout_constraintStart_toStartOf="parent"
 		app:layout_constraintTop_toTopOf="parent"
 		app:srcCompat="@drawable/bell" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
+
+
+
+	</ScrollView>
