--- a/app/src/main/res/layout/activity_task_list.xml
+++ b/app/src/main/res/layout/activity_task_list.xml
@@ -1,11 +1,39 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout
+
+
+<ScrollView
 	xmlns:android="http://schemas.android.com/apk/res/android"
 	xmlns:app="http://schemas.android.com/apk/res-auto"
 	xmlns:tools="http://schemas.android.com/tools"
 	android:layout_width="match_parent"
 	android:layout_height="match_parent"
+	android:fillViewport="true">
+
+
+
+
+
+
+
+
+<androidx.constraintlayout.widget.ConstraintLayout
+	android:layout_width="match_parent"
+	android:layout_height="match_parent"
 	android:background="@drawable/gradient_with_blur">
+
+
+	<TextView
+		android:id="@+id/textView44"
+		android:layout_width="wrap_content"
+		android:layout_height="wrap_content"
+		android:layout_marginStart="136dp"
+		android:layout_marginTop="44dp"
+		android:text="DuckTiveTwo"
+		android:textColor="@color/white"
+		android:textSize="60px"
+		android:textStyle="bold|italic"
+		app:layout_constraintStart_toStartOf="parent"
+		app:layout_constraintTop_toTopOf="parent" />
 
 	<RelativeLayout
 		android:id="@+id/groupedContainer"
@@ -137,6 +165,7 @@
 			android:layout_marginEnd="16dp"
 			android:layout_marginBottom="16dp"
 			app:srcCompat="@drawable/stopwatch" />
+
 	</RelativeLayout>
 
 
@@ -269,90 +298,44 @@
 
 	</androidx.constraintlayout.widget.ConstraintLayout>
 
-	<ImageView
-		android:id="@+id/imageView26"
-		android:layout_width="63dp"
-		android:layout_height="54dp"
-		android:layout_marginStart="16dp"
-		android:layout_marginTop="16dp"
-		app:layout_constraintStart_toStartOf="parent"
-		app:layout_constraintTop_toTopOf="parent"
-		app:srcCompat="@drawable/burgerreal" />
-
 	<TextView
 		android:id="@+id/textView29"
-		android:layout_width="wrap_content"
-		android:layout_height="wrap_content"
+		android:layout_width="172dp"
+		android:layout_height="28dp"
 		android:text="Click me to see your tasks history"
 		android:textColor="@color/white"
-		android:textSize="60px"
+		android:textSize="30px"
 		android:textStyle="italic"
 		app:layout_constraintBottom_toTopOf="@+id/constraintLayout2"
 		app:layout_constraintEnd_toEndOf="parent"
+		app:layout_constraintHorizontal_bias="0.502"
 		app:layout_constraintStart_toStartOf="parent"
-		app:layout_constraintTop_toBottomOf="@+id/imageView24" />
+		app:layout_constraintTop_toBottomOf="@+id/imageView24"
+		app:layout_constraintVertical_bias="0.105" />
 
 	<TextView
 		android:id="@+id/textView31"
 		android:layout_width="wrap_content"
 		android:layout_height="wrap_content"
-		android:layout_marginTop="35dp"
+		android:layout_marginTop="23dp"
 		android:text="Create Your Tasks Here!"
 		android:textColor="@color/white"
 		android:textSize="60px"
 		android:textStyle="italic"
 		app:layout_constraintEnd_toEndOf="parent"
 		app:layout_constraintStart_toStartOf="parent"
-		app:layout_constraintTop_toBottomOf="@+id/textView30" />
+		app:layout_constraintTop_toBottomOf="@+id/textView44" />
 
 	<pl.droidsonroids.gif.GifImageView
 		android:id="@+id/imageView24"
 		android:layout_width="100dp"
 		android:layout_height="116dp"
-		android:layout_marginBottom="70dp"
-		app:layout_constraintBottom_toTopOf="@+id/constraintLayout2"
+		android:src="@drawable/duckduck"
 		app:layout_constraintEnd_toEndOf="parent"
 		app:layout_constraintHorizontal_bias="0.498"
 		app:layout_constraintStart_toStartOf="parent"
-		app:layout_constraintTop_toBottomOf="@+id/groupedContainer2"
-		android:src="@drawable/duckduck"/>
-
-
-
-	<Button
-		android:id="@+id/plusButton"
-		android:layout_width="66dp"
-		android:layout_height="66dp"
-		android:layout_gravity="center"
-		android:layout_margin="8dp"
-		android:layout_marginStart="43dp"
-		android:layout_marginTop="27dp"
-		android:layout_marginEnd="81dp"
-		android:layout_marginBottom="67dp"
-		android:background="@drawable/circular_button_background"
-		android:clipToOutline="true"
-		android:outlineProvider="background"
-		android:padding="16dp"
-		android:text="+"
-		android:textSize="20sp"
-		android:textStyle="bold"
-		app:layout_constraintBottom_toTopOf="@+id/textView29"
-		app:layout_constraintEnd_toEndOf="parent"
-		app:layout_constraintStart_toEndOf="@+id/imageView24"
 		app:layout_constraintTop_toBottomOf="@+id/groupedContainer2" />
 
-	<TextView
-		android:id="@+id/textView30"
-		android:layout_width="wrap_content"
-		android:layout_height="wrap_content"
-		android:layout_marginStart="24dp"
-		android:layout_marginTop="32dp"
-		android:text="DuckTiveTwo"
-		android:textColor="@color/white"
-		android:textSize="60px"
-		android:textStyle="bold|italic"
-		app:layout_constraintStart_toEndOf="@+id/imageView26"
-		app:layout_constraintTop_toTopOf="parent" />
 
 	<ImageView
 		android:id="@+id/imageView27"
@@ -365,5 +348,30 @@
 		app:layout_constraintTop_toTopOf="parent"
 		app:srcCompat="@drawable/bell" />
 
+	<com.google.android.material.floatingactionbutton.FloatingActionButton
+		android:id="@+id/floatingActionButton4"
+		android:layout_width="wrap_content"
+		android:layout_height="wrap_content"
+		android:layout_marginBottom="9dp"
+		android:visibility="invisible"
+		android:clickable="true"
+		app:layout_constraintBottom_toTopOf="@+id/floatingActionButton"
+		app:layout_constraintEnd_toEndOf="@+id/floatingActionButton"
+		app:srcCompat="@drawable/target" />
+
+	<com.google.android.material.floatingactionbutton.FloatingActionButton
+		android:id="@+id/floatingActionButton"
+		android:layout_width="wrap_content"
+		android:layout_height="wrap_content"
+		android:layout_marginEnd="36dp"
+		android:layout_marginBottom="12dp"
+		android:clickable="true"
+		android:visibility="visible"
+		app:layout_constraintBottom_toTopOf="@+id/constraintLayout2"
+		app:layout_constraintEnd_toEndOf="parent"
+		app:srcCompat="@drawable/addbtn" />
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
+
+	</ScrollView>
